--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
     "start": "tsnd ./src/server.ts --respawn  --transpile-only --exit-child",
-    
     "prod": "tsc &&node dist/server.js"
   },
   "devDependencies": {
@@ -14,6 +13,15 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.5",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
