--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
-    "joi-to-typescript": "^4.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
@@ -22,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "passport-facebook": "^3.0.0",
