--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express-session": "^1.17.5",
