--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,7 @@
 
 sessionSecret="sadfsa22@324GG*&@^"
-salt_rounds=10
+salt_rounds=8
 accessToken="ss@3%&*HHJJ**"
 refreshToken="ss@3%&*H%%BBHH&&**"
+accessTokenExpire="1800s"
+refreshTokenExpire="30 days"
