--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,11 @@ accessToken="ss@3%&*HHJJ**"
 refreshToken="ss@3%&*H%%BBHH&&**"
 accessTokenExpire="1800s"
 refreshTokenExpire="30 days"
+
+
+dbPassword="nikhildon1"
+google-client-id="16273442199-j75mbfaavb22o8am8o2m1ul757uc25l9.apps.googleusercontent.com"
+google-client-secret="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"
+
+facebook-client-id="527744295985309"
+facebook-client-secret="6744075df1d8ab403a3ce1825bc67513"
