--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "@types/cors": "^2.8.12",
     "@types/express-session": "^1.17.5",
     "@types/passport": "^1.0.11",
+    "@types/passport-facebook": "^2.1.11",
+    "@types/passport-google-oauth2": "^0.1.5",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
