--- a/server/.env
+++ b/server/.env
@@ -8,8 +8,8 @@ refreshTokenExpire="30 days"
 
 
 dbPassword="nikhildon1"
-google-client-id="16273442199-j75mbfaavb22o8am8o2m1ul757uc25l9.apps.googleusercontent.com"
-google-client-secret="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"
+googleClientId="16273442199-j75mbfaavb22o8am8o2m1ul757uc25l9.apps.googleusercontent.com"
+googleClientSecret="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"
 
-facebook-client-id="527744295985309"
-facebook-client-secret="6744075df1d8ab403a3ce1825bc67513"
+facebookClientId="527744295985309"
+facebookClientSecret="6744075df1d8ab403a3ce1825bc67513"
