--- a/server/.env
+++ b/server/.env
@@ -13,3 +13,5 @@ googleClientSecret="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"
 
 facebookClientId="527744295985309"
 facebookClientSecret="6744075df1d8ab403a3ce1825bc67513"
+
+mail="nikan.khadka.925@gmail.com"
