--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
