--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,11 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express-session": "^1.17.5",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.11",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-google-oauth2": "^0.1.5",
@@ -33,6 +33,7 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
+    "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0"
