completed api fro add email now need to define route to verify email

--- a/server/.env
+++ b/server/.env
@@ -16,3 +16,5 @@ facebookClientSecret="6744075df1d8ab403a3ce1825bc67513"
 
 user="nikantest@zohomail.com"
 pass="nodemailerzoho"
+
+mailupdateSecret="2342DD##3$$@@)!@)ds"
