--- a/server/.env
+++ b/server/.env
@@ -17,4 +17,4 @@ facebookClientSecret="6744075df1d8ab403a3ce1825bc67513"
 user="nikantest@zohomail.com"
 pass="nodemailerzoho"
 
-mailupdateSecret="2342DD##3$$@@)!@)ds"
+mailSecret="2342DD##3$$@@)!@)ds"
