--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,9 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/passport-google-oauth20": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
@@ -19,6 +22,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express-session": "^1.17.5",
+    "@types/morgan": "^1.9.4",
     "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.11",
     "@types/passport-facebook": "^2.1.11",
@@ -33,9 +37,13 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0",
+    "yamljs": "^0.3.0"
   }
 }
