chnage some folders and nested according to sub system or features

--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "passport-google-oauth20": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0",
+    "ts-jest": "^29.0.5",
     "yamljs": "^0.3.0"
   }
 }
