--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -23,6 +23,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
