--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 
 sessionSecret="sadfsa22@324GG*&@^"
-salt_rounds=8
+saltRounds=8
 accessToken="ss@3%&*HHJJ**"
 refreshToken="ss@3%&*H%%BBHH&&**"
 accessTokenExpire="1800s"
