--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -16,6 +16,9 @@
     "eslint": "8.28.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
+    "iron-session": "^6.3.1",
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
