--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -22,6 +22,7 @@
     "iron-session": "^6.3.1",
     "next": "^13.1.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
     "server-only": "^0.0.1",
