--- a/meroghar/tsconfig.json
+++ b/meroghar/tsconfig.json
@@ -29,7 +29,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-, "../server/middleware.ts"  ],
+, "src/middleware.ts"  ],
   "exclude": [
     "node_modules"
   ]
