--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "axios": "^1.3.4",
+    "cloudinary": "^1.35.0",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
@@ -21,6 +22,7 @@
     "http": "^0.0.1-security",
     "iron-session": "^6.3.1",
     "next": "^13.1.2",
+    "next-cloudinary": "^4.0.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
