--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -23,13 +23,16 @@
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
+    "react-tailwindcss-datepicker": "^1.5.1",
     "server-only": "^0.0.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/react-datepicker": "^4.10.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
