--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
+    "react-icons": "^4.8.0",
     "react-tailwindcss-datepicker": "^1.5.1",
     "server-only": "^0.0.1",
     "typescript": "4.9.3"
