--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@firebase/auth": "^0.21.5",
+    "@heroicons/react": "^2.0.16",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
