--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
+    "firebase": "^9.19.1",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "http": "^0.0.1-security",
@@ -28,6 +29,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.8.0",
+    "react-otp-input": "^3.0.0",
+    "react-phone-input-2": "^2.15.1",
     "react-tailwindcss-datepicker": "^1.5.1",
     "server-only": "^0.0.1",
     "typescript": "4.9.3"
