--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.9",
     "axios": "^1.3.4",
     "cloudinary": "^1.35.0",
+    "dayjs": "^1.11.7",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
@@ -25,6 +26,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
     "react-hot-toast": "^2.4.0",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-datepicker": "^4.10.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "autoprefixer": "^10.4.13",
