--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.9",
     "axios": "^1.3.4",
     "cloudinary": "^1.35.0",
+    "country-state-city": "^3.1.2",
     "dayjs": "^1.11.7",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.1.2",
