--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -21,13 +21,12 @@
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.19.1",
-    "flowbite": "^1.6.4",
     "http": "^0.0.1-security",
     "next": "^13.2.4",
+    "node-fetch": "^3.3.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
-    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
     "react-hot-toast": "^2.4.0",
