--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.19.1",
     "http": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "next": "^13.2.4",
     "node-fetch": "^3.3.1",
     "query-string": "^8.1.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/lodash": "^4.14.194",
     "@types/react-date-range": "^1.4.4",
     "@types/react-datepicker": "^4.10.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
