--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@firebase/auth": "^0.21.5",
+    "@paypal/react-paypal-js": "^7.8.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -22,6 +23,7 @@
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.19.1",
     "http": "^0.0.1-security",
+    "khalti-checkout-web": "^2.2.0",
     "lodash": "^4.17.21",
     "next": "^13.2.4",
     "node-fetch": "^3.3.1",
