basic utilities of applciation completed

--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@firebase/auth": "^0.21.5",
     "@paypal/react-paypal-js": "^7.8.3",
+    "@react-pdf/renderer": "^3.1.9",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -21,10 +22,14 @@
     "eslint": "8.28.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.19.1",
+    "html2canvas": "^1.4.1",
     "http": "^0.0.1-security",
+    "jspdf": "^2.5.1",
     "khalti-checkout-web": "^2.2.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "^13.2.4",
     "node-fetch": "^3.3.1",
     "query-string": "^8.1.0",
@@ -44,6 +49,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/file-saver": "^2.0.5",
     "@types/lodash": "^4.14.194",
     "@types/react-date-range": "^1.4.4",
     "@types/react-datepicker": "^4.10.0",
