--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -16,13 +16,11 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "axios": "^1.3.4",
-    "cloudinary": "^1.35.0",
     "country-state-city": "^3.1.2",
     "dayjs": "^1.11.7",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
-    "file-saver": "^2.0.5",
     "firebase": "^9.19.1",
     "html2canvas": "^1.4.1",
     "http": "^0.0.1-security",
@@ -41,7 +39,7 @@
     "react-icons": "^4.8.0",
     "react-otp-input": "^3.0.0",
     "react-phone-input-2": "^2.15.1",
-    "react-spinners": "^0.13.8",
+    "react-stars": "^2.2.5",
     "react-tailwindcss-datepicker": "^1.5.1",
     "server-only": "^0.0.1",
     "typescript": "4.9.3",
