--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -51,6 +51,7 @@
     "@types/lodash": "^4.14.194",
     "@types/react-date-range": "^1.4.4",
     "@types/react-datepicker": "^4.10.0",
+    "@types/react-stars": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
