--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.8.0",
     "react-otp-input": "^3.0.0",
     "react-phone-input-2": "^2.15.1",
+    "react-slider": "^2.0.4",
     "react-stars": "^2.2.5",
     "react-tailwindcss-datepicker": "^1.5.1",
     "server-only": "^0.0.1",
@@ -51,6 +52,7 @@
     "@types/lodash": "^4.14.194",
     "@types/react-date-range": "^1.4.4",
     "@types/react-datepicker": "^4.10.0",
+    "@types/react-slider": "^1.3.1",
     "@types/react-stars": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "autoprefixer": "^10.4.13",
