--- a/meroghar/tsconfig.json
+++ b/meroghar/tsconfig.json
@@ -30,7 +30,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-, "middleware.ts"  ],
+, "src/middleware.ts"  ],
   "exclude": [
     "node_modules"
   ]
