--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
+    "@types/node-schedule": "^2.1.0",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
@@ -38,6 +39,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "morgan": "^1.10.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
