--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
+    "@types/node-fetch": "^2.6.4",
     "@types/node-schedule": "^2.1.0",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/swagger-jsdoc": "^6.0.1",
@@ -28,6 +29,7 @@
     "@types/passport": "^1.0.11",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-google-oauth2": "^0.1.5",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
