--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
+    "@types/node-cron": "^3.0.7",
     "@types/node-fetch": "^2.6.4",
     "@types/node-schedule": "^2.1.0",
     "@types/passport-google-oauth20": "^2.0.11",
@@ -41,6 +42,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
