--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev ",
-    "build": "next build",
-    "start": "next build && next start",
+    "build": "npm install && next build",
+    "start": " next start",
     "lint": "next lint"
   },
   "dependencies": {
