--- a/meroghar/package.json
+++ b/meroghar/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node":">=18.17.0"
+    "node": ">=18.17.0"
   },
   "scripts": {
     "dev": "next dev ",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@firebase/auth": "^0.21.5",
+    "@netlify/plugin-nextjs": "^4.39.3",
     "@paypal/react-paypal-js": "^7.8.3",
     "@react-pdf/renderer": "^3.1.9",
     "@types/node": "18.11.9",
